# krglhwebp

./: .gitmodules  CMakeLists.txt  vcpkg.json
.github/workflows/: cmake.yml
src/: dllmain.cpp
